--- a/wp-content/themes/drdavi/style.css
+++ b/wp-content/themes/drdavi/style.css
@@ -7,8 +7,17 @@ Description: Tema criado para Davi.
 Version: 1.0
 */
 
-
 @import 'https://fonts.googleapis.com/css2?family=Jost:wght@400;500;600&display=swap';
+
+@import 'css/framework/icons/lineicons.css';
+@import 'css/framework/bootstrap.min.css';
+@import 'css/framework/animate.min.css';
+@import 'css/magnific-popup.css';
+/*@import 'css/framework/font-awesome.min.css';*/
+@import 'css/framework/owl.carousel.min.css';
+@import 'css/framework/swiper.min.css';
+@import 'css/default.css';
+@import 'css/responsive.css';
 
 body {
 	font-family: jost, sans-serif
@@ -1059,7 +1068,7 @@ i.fa.fa-arrow-right {
 	left: 0;
 	top: 0;
 	bottom: 0;
-	height: 100%;
+	height: 75%;
 }
 
 .about-img {
