--- a/wp-content/themes/drdavi/css/responsive.css
+++ b/wp-content/themes/drdavi/css/responsive.css
@@ -373,7 +373,8 @@
 	.why-chose-img {
 		background-image: url(../img/whay.png);
 		background-size: cover;
-		height: 100%
+		height: 100%;
+		display: none;
 	}
 
 	.why-chose-img img {
