--- a/wp-content/themes/drdavi/style.css
+++ b/wp-content/themes/drdavi/style.css
@@ -36,6 +36,10 @@ h4 {
 	font-family: jost, sans-serif
 }
 
+#menu-menu-principal {
+	display: flex !important;
+	list-style: none;
+}
 
 .slider-img-banner1{
     background-image: url('./img/banner.png');
