--- a/wp-content/themes/drdavi/style.css
+++ b/wp-content/themes/drdavi/style.css
@@ -46,6 +46,10 @@ h4 {
     width: 1343px;
 }
 
+.about-us{
+	margin-bottom: 50px;
+}
+
 .slider-img-banner2{
     background-image: url('./img/banner.png');
     width: 1343px;
@@ -1437,7 +1441,7 @@ span.testimonial-img {
 	bottom: 0;
 	top: 0;
 	width: 100%;
-	height: 100%
+	height: 100%;
 }
 
 .about-background h2 {
