--- a/wp-content/themes/drdavi/css/responsive.css
+++ b/wp-content/themes/drdavi/css/responsive.css
@@ -65,7 +65,7 @@
 	}
 
 	.choose-us:before {
-		width: 50%
+		width: 100% !important;
 	}
 
 	.nav-item {
@@ -78,7 +78,8 @@
 	.why-chose-img {
 		background-image: url(../img/whay.png);
 		background-size: cover;
-		height: 100%
+		height: 100%;
+		display: none;
 	}
 
 	.why-chose-img img {
