feat: :sparkles: add correct theme author

--- a/wp-content/themes/drdavi/style.css
+++ b/wp-content/themes/drdavi/style.css
@@ -1,7 +1,7 @@
 /*
 Theme Name: DrDavi
 Theme URI: http://localhost
-Author: André Rafael
+Author: Davi Alves
 Author URI: https://github.com/d1av/
 Description: Tema criado para Davi.
 Version: 1.0
