--- a/wp-content/themes/drdavi/style.css
+++ b/wp-content/themes/drdavi/style.css
@@ -36,6 +36,12 @@ h4 {
 	font-family: jost, sans-serif
 }
 
+.about-home-title{
+	padding: 11px 0 0 13px;
+	margin: 0;
+	color: #0657a8
+}
+
 .hide-element{
 	display: none;
 }
