--- a/wp-content/themes/drdavi/style.css
+++ b/wp-content/themes/drdavi/style.css
@@ -36,6 +36,11 @@ h4 {
 	font-family: jost, sans-serif
 }
 
+#map {
+  height: 100%;
+}
+
+
 .about-home-title{
 	padding: 11px 0 0 13px;
 	margin: 0;
@@ -2008,8 +2013,12 @@ textarea.form-control.form-com-message {
 }
 
 section.map {
+	display: flex;
+	align-items: center;
+	justify-content: center;
 	padding: 0;
-	margin: 0 0 -7px
+	margin: 0 0 17px;
+	width: 100%;
 }
 
 .blog-details-img img {
