--- a/wp-content/themes/drdavi/style.css
+++ b/wp-content/themes/drdavi/style.css
@@ -40,6 +40,12 @@ h4 {
   height: 100%;
 }
 
+.wp-button-home{
+	position:fixed;
+	bottom:10px;
+	right:10px;
+	z-index:99999;
+}
 
 .about-home-title{
 	padding: 11px 0 0 13px;
